--- a/starter-code/views/createLocation.hbs
+++ b/starter-code/views/createLocation.hbs
@@ -15,7 +15,7 @@
     <input type="text" name="latitude" placeholder="latitude">
     <input type="text" name="longitude" placeholder="longitude">
 
-    <input type="submit" value="Create">
+    <input type="submit" value="Create" class="submit">
 
     {{#if message}}
     <div class="error-message">{{message}}</div>
