--- a/starter-code/public/stylesheets/style.css
+++ b/starter-code/public/stylesheets/style.css
@@ -1,4 +1,137 @@
+/************* Reset de la hoja de estilos. **************/
+
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after, q:before, q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/*************** Estilos propios del documento. *****************/
+
+html {
+  font-size: 10px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+/* a {
+  text-decoration: none;
+  color: black;
+} */
+
+/************** Index. ***************/
+
+#map-page-container {
+  display: flex;
+  flex-direction: column;
+  padding: 4rem 7rem;
+}
+
+#create-place {
+  text-decoration: none;
+}
+
+#create-place  div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 15rem;
+  font-size: 1.6rem;
+  padding: 0.5rem 1rem;
+  background: rgb(130, 214, 241);
+  border: 1px solid black;
+  border-radius: 1rem;
+}
+
+#map-links-container {
+  display: flex;
+  justify-content: left;
+  margin-top: 3rem;
+}
+
 #map {
-  width: 100%;
-  height: 400px;
+  width: 60vw;
+  height: 500px;
+}
+
+#links-container {
+  display: flex;
+  flex-direction: column;
+  margin-left: 7rem;
+}
+
+.text {
+  font-size: 1.6rem;
+  margin-bottom: 2rem;
+}
+
+.update-container {
+  font-size: 1.3rem;
+  margin-bottom: 1rem;
+  color: rgb(88, 175, 204);
+}
+
+/*************** Estilos de los formularios. ****************/
+
+.form-container {
+  display: flex;
+  justify-content: center;
+}
+
+.form-container form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 15vh;
+}
+
+.form-container form label {
+  font-size: 1.6rem;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+.form-container form input {
+  font-size: 1.6rem;
+  padding: 0.5rem 1rem;
+  margin-bottom: 1rem;
+}
+
+.form-container form select {
+  font-size: 1.6rem;
+  padding: 0.5rem 1rem;
+  margin-bottom: 1rem;
+}
+
+.submit {
+  margin-top: 2rem;
 }
