--- a/starter-code/views/updateLocation.hbs
+++ b/starter-code/views/updateLocation.hbs
@@ -15,7 +15,7 @@
     <input type="text" name="latitude" value="{{place.location.coordinates.[0]}}">
     <input type="text" name="longitude" value="{{place.location.coordinates.[1]}}">
 
-    <input type="submit" value="Update">
+    <input type="submit" value="Update" class="submit">
 
     {{#if message}}
     <div class="error-message">{{message}}</div>
