--- a/starter-code/views/index.hbs
+++ b/starter-code/views/index.hbs
@@ -18,7 +18,7 @@
   </div>
 
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-hDzwHXo7TWsyH9rK1Sa3m8pKA00CiJM">
+  <script src="https://maps.googleapis.com/maps/api/js?key={{key}}">
   </script>
   <script src="/javascripts/script.js"></script>
   </script>
